crew billede igen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <nav class="navbar">
         <div class="logo-header">
           <a href="index.html">
-            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 788.83 375.24">
+            <svg
+              id="Layer_1"
+              data-name="Layer 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 788.83 375.24"
+            >
               <defs>
                 <style>
                   .cls-1 {
@@ -27,8 +32,14 @@
                 class="cls-1"
                 d="M383.77.01c39.61,1.05,72.42,23.49,76.3,64.96,2.58,6.11,8.19,7.47,16.86,4.13,26.16-13.29,50.46-14.89,72.91-4.8,9.3,11.07,17.57,12.32,24.76,3.76,31.85-37.66,59.74-65.44,112.98-65.6,54.68-.16,96.47,42.03,100.9,95.9-.79,8.76,1.08,19.04,0,27.54-1.06,60.2-83.29,150.93-143.96,104.35-8.49-10.5-17.77-19.65-27.81-27.46-5.79,77.87-19.46,181.71-122.59,171.78-36.4,2.1-74.02-28.82-69.86-67.04,4.63-42.49,33.56-46.64,69.02-48.18,71.83-19.45,10.52-118.86-33.74-49.01-16.37,41.32-33.76,79.22-79.37,95.89-64.25,23.47-150.12-23.94-138.88-97.09-.47-36.48-14.61-26.23-33.27-7.22-24.32,30.33-48.55,54.01-87.06,65.58C53.74,287.73-6.61,246.86.58,174.3c4.9-49.47,57.73-64.47,83.1-21.65,22.51,75.82,94.15-9.27,79.53-52.31-11.11-18.07-18.14-34.5-2.74-53.48,23.6-29.06,66.63-1.74,87.35,17.5,8.02,4.43,12.05,3.02,17.18-4.84C282.39,26.05,309.91-.6,350.37.01h33.4ZM662.23,81.11c-20.42,4.21-23.91,35.43-16.84,51.34,13.98,31.53,87.55,12.57,64.13-30.76-7.86-14.53-31.26-23.9-47.29-20.6v.02ZM329.37,196.07c18.22,16.13,41.09-12.87,48.89-27.54,7.8-14.67,20.41-51.48,4.29-62.04-22.57-14.81-50.24,17.36-56.67,37.15-3.94,12.16-6.64,43.47,3.51,52.43h-.02Z"
               />
-              <path class="cls-1" d="M212.38,2.5c13.2-2.02,33.44-1.84,45.08,4.98,23.5,13.76,16.84,41.34-12.03,37.6-5.79-.75-39.63-17.79-45.04-21.77-13.91-10.2.22-19,11.99-20.82Z" />
-              <path class="cls-1" d="M496.75,10.98c10.73-.12,38.07,4.86,39.37,18.33,1.83,18.96-71.58,39.3-73.86,7.06-1.36-19.16,18.63-25.23,34.51-25.4l-.02.02Z" />
+              <path
+                class="cls-1"
+                d="M212.38,2.5c13.2-2.02,33.44-1.84,45.08,4.98,23.5,13.76,16.84,41.34-12.03,37.6-5.79-.75-39.63-17.79-45.04-21.77-13.91-10.2.22-19,11.99-20.82Z"
+              />
+              <path
+                class="cls-1"
+                d="M496.75,10.98c10.73-.12,38.07,4.86,39.37,18.33,1.83,18.96-71.58,39.3-73.86,7.06-1.36-19.16,18.63-25.23,34.51-25.4l-.02.02Z"
+              />
             </svg>
           </a>
         </div>
@@ -57,9 +68,18 @@
       <section>
         <div>
           <p>JOJO IS YOUR NEIGHBORHOOD BAR RELAXED, SOCIAL AND UNPRETENTIOUS</p>
-          <p>A place for pre-drinks, casual nights out, and genuine connections.</p>
-          <p>At JOJO every cocktail is freshly produced. We keg them and serve on tap, so every pour is fast and consistent for the price of only 50 DKK.</p>
-          <p>And also - we obsess over details. From measurement to garnish, we bring great cocktails to life through skill and dedication.</p>
+          <p>
+            A place for pre-drinks, casual nights out, and genuine connections.
+          </p>
+          <p>
+            At JOJO every cocktail is freshly produced. We keg them and serve on
+            tap, so every pour is fast and consistent for the price of only 50
+            DKK.
+          </p>
+          <p>
+            And also - we obsess over details. From measurement to garnish, we
+            bring great cocktails to life through skill and dedication.
+          </p>
           <div>
             <button>SEE OUR MENU</button>
             <button>ABOUT US</button>
@@ -74,7 +94,12 @@
       <div class="footer-left">
         <div class="logo-footer">
           <a href="index.html">
-            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 788.83 375.24">
+            <svg
+              id="Layer_1"
+              data-name="Layer 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 788.83 375.24"
+            >
               <defs>
                 <style>
                   .cls-1 {
@@ -86,15 +111,27 @@
                 class="cls-1"
                 d="M383.77.01c39.61,1.05,72.42,23.49,76.3,64.96,2.58,6.11,8.19,7.47,16.86,4.13,26.16-13.29,50.46-14.89,72.91-4.8,9.3,11.07,17.57,12.32,24.76,3.76,31.85-37.66,59.74-65.44,112.98-65.6,54.68-.16,96.47,42.03,100.9,95.9-.79,8.76,1.08,19.04,0,27.54-1.06,60.2-83.29,150.93-143.96,104.35-8.49-10.5-17.77-19.65-27.81-27.46-5.79,77.87-19.46,181.71-122.59,171.78-36.4,2.1-74.02-28.82-69.86-67.04,4.63-42.49,33.56-46.64,69.02-48.18,71.83-19.45,10.52-118.86-33.74-49.01-16.37,41.32-33.76,79.22-79.37,95.89-64.25,23.47-150.12-23.94-138.88-97.09-.47-36.48-14.61-26.23-33.27-7.22-24.32,30.33-48.55,54.01-87.06,65.58C53.74,287.73-6.61,246.86.58,174.3c4.9-49.47,57.73-64.47,83.1-21.65,22.51,75.82,94.15-9.27,79.53-52.31-11.11-18.07-18.14-34.5-2.74-53.48,23.6-29.06,66.63-1.74,87.35,17.5,8.02,4.43,12.05,3.02,17.18-4.84C282.39,26.05,309.91-.6,350.37.01h33.4ZM662.23,81.11c-20.42,4.21-23.91,35.43-16.84,51.34,13.98,31.53,87.55,12.57,64.13-30.76-7.86-14.53-31.26-23.9-47.29-20.6v.02ZM329.37,196.07c18.22,16.13,41.09-12.87,48.89-27.54,7.8-14.67,20.41-51.48,4.29-62.04-22.57-14.81-50.24,17.36-56.67,37.15-3.94,12.16-6.64,43.47,3.51,52.43h-.02Z"
               />
-              <path class="cls-1" d="M212.38,2.5c13.2-2.02,33.44-1.84,45.08,4.98,23.5,13.76,16.84,41.34-12.03,37.6-5.79-.75-39.63-17.79-45.04-21.77-13.91-10.2.22-19,11.99-20.82Z" />
-              <path class="cls-1" d="M496.75,10.98c10.73-.12,38.07,4.86,39.37,18.33,1.83,18.96-71.58,39.3-73.86,7.06-1.36-19.16,18.63-25.23,34.51-25.4l-.02.02Z" />
+              <path
+                class="cls-1"
+                d="M212.38,2.5c13.2-2.02,33.44-1.84,45.08,4.98,23.5,13.76,16.84,41.34-12.03,37.6-5.79-.75-39.63-17.79-45.04-21.77-13.91-10.2.22-19,11.99-20.82Z"
+              />
+              <path
+                class="cls-1"
+                d="M496.75,10.98c10.73-.12,38.07,4.86,39.37,18.33,1.83,18.96-71.58,39.3-73.86,7.06-1.36-19.16,18.63-25.23,34.51-25.4l-.02.02Z"
+              />
             </svg>
           </a>
         </div>
 
         <div class="socials">
-          <a href="https://www.tiktok.com/@jojococktailbar" class="social-btn"><img src="img/svg/tiktok.svg" alt="" /></a>
-          <a href="https://www.instagram.com/jojococktailbar/" class="social-btn"><img src="img/svg/ig.svg" alt="" /></a>
+          <a href="https://www.tiktok.com/@jojococktailbar" class="social-btn"
+            ><img src="img/svg/tiktok.svg" alt=""
+          /></a>
+          <a
+            href="https://www.instagram.com/jojococktailbar/"
+            class="social-btn"
+            ><img src="img/svg/ig.svg" alt=""
+          /></a>
         </div>
       </div>
 
@@ -103,23 +140,36 @@
 
         <p>
           JOIN THE JOJO FAM:
-          <button class="apply-btn" popovertarget="popover-footer">APPLY HERE</button>
+          <button class="apply-btn" popovertarget="popover-footer">
+            APPLY HERE
+          </button>
         </p>
         <div popover id="popover-footer">
-          <button class="luk_btn" popovertarget="popover-footer" popovertargetaction="hide">Luk &#x2715;</button>
+          <button
+            class="luk_btn"
+            popovertarget="popover-footer"
+            popovertargetaction="hide"
+          >
+            Luk &#x2715;
+          </button>
 
           <div class="popover-wrapper">
             <h1>WE ARE HIRING</h1>
             <h2>JOIN THE JOJO FAM</h2>
             <div class="popover-content">
               <div class="popover-image">
-                <img src="img/image 74.png" alt="Jojo team" />
+                <img src="img/crew.webp" alt="Jojo team" />
               </div>
               <div class="form-section">
                 <form>
                   <div class="form-group">
                     <label for="full-name">FULL NAME</label>
-                    <input type="text" id="full-name" name="full-name" required />
+                    <input
+                      type="text"
+                      id="full-name"
+                      name="full-name"
+                      required
+                    />
                   </div>
 
                   <div class="form-group">
