--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
           </p>
         </div>
         <div>
-          <img src="img/image 74.png" alt="crew" />
+          <img src="img/crew.webp" alt="crew" />
         </div>
       </section>
       <section id="organic">
@@ -117,7 +117,11 @@
           </div>
           <div class="description">
             <h3>LEMON</h3>
-            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+            <p>
+              Lemon brings a crisp, refreshing tang to drinks, brightening
+              flavors and adding a clean citrus lift that makes every sip more
+              vibrant.
+            </p>
           </div>
           <div class="used">
             <h4>USED IN</h4>
@@ -126,7 +130,9 @@
               <a href="menu.html#basilsmash" class="cta-yellow">BASIL SMASH</a>
             </div>
             <div class="expanded">
-              <a href="menu.html#grapefruitspritz" class="cta-yellow">GRAPEFRUIT SPRITZ</a>
+              <a href="menu.html#grapefruitspritz" class="cta-yellow"
+                >GRAPEFRUIT SPRITZ</a
+              >
             </div>
           </div>
         </article>
@@ -136,16 +142,24 @@
           </div>
           <div class="description">
             <h3>RUM</h3>
-            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+            <p>
+              Lemon brings a crisp, refreshing tang to drinks, brightening
+              flavors and adding a clean citrus lift that makes every sip more
+              vibrant.
+            </p>
           </div>
           <div class="used">
             <h4>USED IN</h4>
             <div class="cta-menu">
-              <a href="menu.html#amarettosour" class="cta-yellow">AMARETTO SOUR</a>
+              <a href="menu.html#amarettosour" class="cta-yellow"
+                >AMARETTO SOUR</a
+              >
               <a href="menu.html#takamango" class="cta-yellow">TAKAMANGO</a>
             </div>
             <div class="cta-menu expanded">
-              <a href="menu.html#rhubarbdaiquiri" class="cta-yellow">RHUBARB DAIQUIRI</a>
+              <a href="menu.html#rhubarbdaiquiri" class="cta-yellow"
+                >RHUBARB DAIQUIRI</a
+              >
               <a href="menu.html#whiterebel" class="cta-yellow">WHITE REBEL</a>
             </div>
           </div>
@@ -156,12 +170,18 @@
           </div>
           <div class="description">
             <h3>JACK D WHISKEY</h3>
-            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+            <p>
+              Lemon brings a crisp, refreshing tang to drinks, brightening
+              flavors and adding a clean citrus lift that makes every sip more
+              vibrant.
+            </p>
           </div>
           <div class="used">
             <h4>USED IN</h4>
             <div class="cta-menu">
-              <a href="menu.html#amarettosour" class="cta-yellow">AMARETTO SOUR</a>
+              <a href="menu.html#amarettosour" class="cta-yellow"
+                >AMARETTO SOUR</a
+              >
               <a href="menu.html#cherryfizz" class="cta-yellow">CHERRY FIZZ</a>
             </div>
           </div>
@@ -172,7 +192,11 @@
           </div>
           <div class="description">
             <h3>COCONUT</h3>
-            <p>Lemon brings a crisp, refreshing tang to drinks, brightening flavors and adding a clean citrus lift that makes every sip more vibrant.</p>
+            <p>
+              Lemon brings a crisp, refreshing tang to drinks, brightening
+              flavors and adding a clean citrus lift that makes every sip more
+              vibrant.
+            </p>
           </div>
           <div class="used">
             <h4>USED IN</h4>
