--- a/locations.html
+++ b/locations.html
@@ -88,11 +88,13 @@
               <p>14:00-00:00</p>
               <p>15:00-00:00</p>
             </div>
-            <a
-              class="maps"
-              href="https://www.google.com/maps/place/Mj%C3%B8lnerparken+26,+2200+K%C3%B8benhavn/@55.7032057,12.5387401,17z/data=!3m1!4b1!4m6!3m5!1s0x4652524eb9b8fc39:0x919d2c3ef4af2147!8m2!3d55.7032027!4d12.541315!16s%2Fg%2F11nnkqwy68?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
-              >FIND YOUR WAY</a
-            >
+            <div class="maps-container">
+              <a
+                class="maps"
+                href="https://www.google.com/maps/place/Mj%C3%B8lnerparken+26,+2200+K%C3%B8benhavn/@55.7032057,12.5387401,17z/data=!3m1!4b1!4m6!3m5!1s0x4652524eb9b8fc39:0x919d2c3ef4af2147!8m2!3d55.7032027!4d12.541315!16s%2Fg%2F11nnkqwy68?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                >FIND YOUR WAY</a
+              >
+            </div>
           </div>
         </article>
       </section>
@@ -125,11 +127,13 @@
               <p>14:00-02:00</p>
               <p>15:00-01:00</p>
             </div>
-            <a
-              class="maps"
-              href="https://www.google.com/maps/place/Vesterbrogade+47,+1620+K%C3%B8benhavn/@55.672004,12.5530399,17z/data=!3m1!4b1!4m6!3m5!1s0x46525374d21b83fb:0x604599acf3b8b835!8m2!3d55.672001!4d12.5556148!16s%2Fg%2F11q2vvms5l?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
-              >FIND YOUR WAY</a
-            >
+            <div class="maps-container">
+              <a
+                class="maps"
+                href="https://www.google.com/maps/place/Vesterbrogade+47,+1620+K%C3%B8benhavn/@55.672004,12.5530399,17z/data=!3m1!4b1!4m6!3m5!1s0x46525374d21b83fb:0x604599acf3b8b835!8m2!3d55.672001!4d12.5556148!16s%2Fg%2F11q2vvms5l?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                >FIND YOUR WAY</a
+              >
+            </div>
           </div>
         </article>
       </section>
@@ -162,11 +166,13 @@
               <p>15:00-00:00</p>
               <p>15:00-00:00</p>
             </div>
-            <a
-              class="maps"
-              href="https://www.google.com/maps/place/Sundevedsgade+4,+1751+K%C3%B8benhavn/@55.6707196,12.5413646,17z/data=!3m1!4b1!4m6!3m5!1s0x4652539ed8e49f51:0x1712356b90659801!8m2!3d55.6707166!4d12.5439395!16s%2Fg%2F11c3q3mkys?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
-              >FIND YOUR WAY</a
-            >
+            <div class="maps-container">
+              <a
+                class="maps"
+                href="https://www.google.com/maps/place/Sundevedsgade+4,+1751+K%C3%B8benhavn/@55.6707196,12.5413646,17z/data=!3m1!4b1!4m6!3m5!1s0x4652539ed8e49f51:0x1712356b90659801!8m2!3d55.6707166!4d12.5439395!16s%2Fg%2F11c3q3mkys?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                >FIND YOUR WAY</a
+              >
+            </div>
           </div>
         </article>
       </section>
@@ -199,11 +205,13 @@
               <p>PENDING...</p>
               <p>PENDING...</p>
             </div>
-            <a
-              class="maps"
-              href="https://www.google.com/maps/place/%C3%85boulevarden+64,+8000+Aarhus/@56.1569022,10.188881,15z/data=!3m1!4b1!4m6!3m5!1s0x464c3f9154b87b87:0xbb69f9dc78d360c1!8m2!3d56.1568916!4d10.2073349!16s%2Fg%2F11q2nk7thr?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
-              >FIND YOUR WAY</a
-            >
+            <div class="maps-container">
+              <a
+                class="maps"
+                href="https://www.google.com/maps/place/%C3%85boulevarden+64,+8000+Aarhus/@56.1569022,10.188881,15z/data=!3m1!4b1!4m6!3m5!1s0x464c3f9154b87b87:0xbb69f9dc78d360c1!8m2!3d56.1568916!4d10.2073349!16s%2Fg%2F11q2nk7thr?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D"
+                >FIND YOUR WAY</a
+              >
+            </div>
           </div>
         </article>
       </section>
@@ -276,7 +284,7 @@
             <h2>JOIN THE JOJO FAM</h2>
             <div class="popover-content">
               <div class="popover-image">
-                <img src="img/image 74.png" alt="Jojo team" />
+                <img src="img/crew.webp" alt="Jojo team" />
               </div>
               <div class="form-section">
                 <form>
