--- a/locations.html
+++ b/locations.html
@@ -64,9 +64,13 @@
         <h3 class="address_b">MJØLNERPARKEN 26, 2200 COPENHAGEN N</h3>
         <article class="grid_1-1-1-1">
           <div class="galleri">
-            <img class="facade" src="img/facade.png" alt="facade" />
-            <img class="indefor" src="img/indenfor.png" alt="indefor" />
-            <img class="stemning" src="img/stemning.png" alt="stemning" />
+            <img class="facade" src="img/facade.webp" alt="facade" />
+            <img class="indefor" src="img/indoor_jojo.webp" alt="indefor" />
+            <img
+              class="stemning"
+              src="img/stemning_index.webp"
+              alt="stemning"
+            />
           </div>
           <div class="opening_hours1">
             <h3 class="blue">OPENING HOURS</h3>
@@ -103,9 +107,13 @@
         <h3 class="address_r location">VESTERBROGADE 47, 1620 COPENHAGEN V</h3>
         <article class="grid_1-1-1-1">
           <div class="galleri galleri2">
-            <img class="facade" src="img/facade.png" alt="facade" />
-            <img class="indefor" src="img/indenfor.png" alt="indefor" />
-            <img class="stemning" src="img/stemning.png" alt="stemning" />
+            <img class="facade" src="img/facade.webp" alt="facade" />
+            <img class="indefor" src="img/indoor_jojo.webp" alt="indefor" />
+            <img
+              class="stemning"
+              src="img/stemning_index.webp"
+              alt="stemning"
+            />
           </div>
           <div class="opening_hours2">
             <h3 class="red">OPENING HOURS</h3>
@@ -142,9 +150,13 @@
         <h3 class="address_b">SUNDEVEDSGADE 4, 1751 COPENHAGEN V</h3>
         <article class="grid_1-1-1-1">
           <div class="galleri">
-            <img class="facade" src="img/facade.png" alt="facade" />
-            <img class="indenfor" src="img/indenfor.png" alt="indefor" />
-            <img class="stemning" src="img/stemning.png" alt="stemning" />
+            <img class="facade" src="img/facade.webp" alt="facade" />
+            <img class="indenfor" src="img/indoor_jojo.webp" alt="indefor" />
+            <img
+              class="stemning"
+              src="img/stemning_index.webp"
+              alt="stemning"
+            />
           </div>
           <div class="opening_hours1">
             <h3 class="blue">OPENING HOURS</h3>
@@ -181,9 +193,13 @@
         <h3 class="address_r location">ÅBOULEVARDEN 64, 8000 AARHUS C</h3>
         <article class="grid_1-1-1-1">
           <div class="galleri galleri2">
-            <img class="facade" src="img/facade.png" alt="facade" />
-            <img class="indefor" src="img/indenfor.png" alt="indefor" />
-            <img class="stemning" src="img/stemning.png" alt="stemning" />
+            <img class="facade" src="img/facade.webp" alt="facade" />
+            <img class="indefor" src="img/indoor_jojo.webp" alt="indefor" />
+            <img
+              class="stemning"
+              src="img/stemning_index.webp"
+              alt="stemning"
+            />
           </div>
           <div class="opening_hours2">
             <h3 class="red">OPENING HOURS</h3>
