--- a/about.html
+++ b/about.html
@@ -245,10 +245,10 @@
                   <div class="form-group">
                     <label for="location">PREFERRED LOCATION</label>
                     <select name="location" id="location" required>
-                      <option value="vesterbro1">Vesterbro1</option>
-                      <option value="vesterbro2">Vesterbro</option>
-                      <option value="noerrebro">Nørrebro</option>
-                      <option value="aarhus">Århus</option>
+                      <option value="vesterbro1">Vesterbrogade</option>
+                      <option value="vesterbro2">Sundevedsgade</option>
+                      <option value="noerrebro">Mjølnerparken</option>
+                      <option value="aarhus">Åboulevarden</option>
                     </select>
                   </div>
 
